[package]
name = "enigma-rust"
version = "0.1.0"
authors = ["OlivierNeyret <olivier@neyret.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "enigma"
path = "src/enigma/enigma.rs"

[[bin]]
name = "enigma_bin"
path = "src/bin.rs"

[dependencies]
